fix: increase size of dictionary button on mobile

--- a/client/src/MobileApp.css
+++ b/client/src/MobileApp.css
@@ -20,6 +20,7 @@
 
 .input-container > button {
 	box-sizing: border-box;
+	width: 10%;
 }
 
 .history ul,
